...
                          borderRadius: BorderRadius.only(bottomLeft: Radius.circular(32))
                        ),
                        child: Text(
                          isReturningUser ?
                          "Welcome Back, ${userProfile.username}!" :
                          "Welcome New User!",
                          key: Key('welcome_title_text'),
                          style: GoogleFonts.inter(
                            color: Color.fromRGBO(246, 252, 253, 1),
                            fontSize: 24,
                            fontWeight: FontWeight.bold
                          ),
                        ),
...
                                  width: double.infinity,
                                  decoration: BoxDecoration(
                                    color: appColors.primaryColor,
                                    borderRadius: BorderRadius.all(Radius.circular(8))
                                  ),
                                  child: InkWell(
                                    key: Key("welcome_go_to_dashboard_button"),
                                    onTap: () async {          
                                      if (context.mounted) { 
                                        Navigator.pushReplacement(
                                          context, 
                                          MaterialPageRoute(
                                            builder: (context) => DashboardScreen()
...
