...
        final totalUnlockedBadges = userProgress.unlockedBadgeIds.length;

        return Scaffold(
          backgroundColor: appColors.backgroundColor,
          appBar: AppBar(
            title: Text(
              "Your Dashboard",
              style: GoogleFonts.inter(
                fontSize: 24,
                color: appColors.textColor,
                fontWeight: FontWeight.bold
              ),
            ),
...
